# Sonic1PC

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md
asm/Animation/: BuzzBomber.asm  BuzzMissile.asm  Chopper.asm  Crabmeat.asm  Jaws.asm  LavaGeyser.asm  LavaWall.asm  Monitor.asm  Motobug.asm  Newtron.asm  Orbinaut.asm  PSB.asm  PlasmaBallLauncher.asm  Ring.asm  ShieldInvincibility.asm  Signpost.asm  Sonic.asm  SpecialStageEntryUnused.asm  Spring.asm  TitleSonic.asm  TryAgainEndEggman.asm  WaterSplash.asm  Yadrin.asm
asm/Mappings/: TitleCard.asm
bin2h/: CMakeLists.txt  bin2h.cxx
res/Mappings/: Animals1  Animals2  Animals3  Checkpoint  Explosion  Points
src/: Constants.h  Demo.c  GM_Level.c  GM_SSRG.c  GM_Sega.c  GM_Title.c  Game.c  Game.h  HUD.c  Level.c  Level.h  LevelCollision.c  LevelDraw.c  LevelDraw.h  LevelScroll.c  LevelScroll.h  Macros.h  Object.c  Object.h  Oscillatory Routines.c  Oscillatory Routines.h  PLC.c  PLC.h  Palette.c  PaletteCycle.c  SpecialStage.c  Types.h
src/Backend/: Joypad.h  VDP.c  VDP.h
src/Backend/SDL2/: Input.c  Render.c
src/Object/: Animal.c  Animal.h  BuzzBomber.c  BuzzBomber.h  Checkpoint.c  Checkpoint.h  Chopper.c  Chopper.h  Crabmeat.c  Crabmeat.h  Credits.c  Credits.h  Explosion.c  Explosion.h  GHZBridge.c  GHZEdge.c  GHZRock.c  GameOverCard.c  HUD.c  Monitor.c  Motobug.c  Newtron.c  PSB.c  Points.c  Points.h  Ring.c  ShieldInvincibility.c  Signpost.c  Sonic.c  Sonic.h  SpecialSonic.c  Spikes.c  Spring.c  TitleCard.c  TitleSonic.c
